--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         html, body { margin:0; padding:0; overflow:hidden; background-color: rgb(21, 57, 95); }
-        svg { position:fixed; top:0; left:0; height:100%; width:100% }
+        img { position:fixed; top:0; left:0; height:100%; width:100% }
     </style>
 </head>
 
