--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <style type="text/css">
         html, body { margin:0; padding:0; overflow:hidden; background-color: rgb(21, 57, 95); }
         img { position:fixed; top:0; left:0; height:100%; width:100% }
+		p {text-align: center; color: white; font-family: Arial, Helvetica, sans-serif; font-size: larger;}
     </style>
 </head>
 
 <body>
 	<img src="logo.svg">
-	<p>Website coming soon</p>
+	<p>Website Coming Soon</p>
 </body>
   
 </html>
