The Apex of Integration

--- a/staging/index.html
+++ b/staging/index.html
@@ -806,14 +806,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Enjoy the low price. We are tracking any intention of piracy.</p>
+                        <p>The Apex of Integration</p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2020 Aero Corps Solutions is Proudly Powered by <a
-                                href="https://themeforest.net/user/codingsdev" target="_blank">Codings</a>.</p>
+                        <p>© 2021 Aero Corps Solutions</p>
                     </div>
                 </div>
             </div>
