added content to homepage, copied about page

--- a/staging/index.html
+++ b/staging/index.html
@@ -121,9 +121,9 @@
                 <!-- Navbar Brand-->
                 <a class="navbar-brand" href="/">
                     <img src="logo.svg" alt="ACS">
-                    
+
                     <span class="brand">
-                        <img src="logo-text.svg" alt="ACS"> 
+                        <img src="logo-text.svg" alt="ACS">
                     </span>
 
 
@@ -271,25 +271,156 @@
         </div>
     </section>
 
+    <!--Ghostie's Section-->
+    <section id="about-acs" class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lgd-8 align-self-top text">
+                    <div class="row intro m-0">
+                        <div class="col-12 p-0">
+                            <span clas="pre-title m-0">ABOUT AERO CORPS SOLUTIONS</span>
+                            <h2>
+                                <span class="featured">
+                                    <span>Who</span> 
+                                </span>
+                                 We Are
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 p-0 pr-md-5">
+                            <p>	ACS was founded in late 2020 in response to a need for deeper integration between both aerospace support entities and aerospace line operations.  After years of working in both industries as an electronics engineer and as a military pilot currently at the airlines, it was clear to me the overwhelming disconnect between those that design/modify/develop aircraft systems and those who employ them.  
+                                We work in an industry where the quality of our product is paramount to not only our Airman’s survival, but their mission’s success.  Yet we must always balance what we can deliver to our airborne warfighters with what time and money we have available.  This is not under debate.  This puts everyone under insurmountable pressure.  How do you measure the worth of one life, or the success of one mission and its’s value to the larger strategic picture?   If we hold money and time constant, then the only thing we can control is our effectiveness.  We need to make the most of every resource spent on these systems so when they hit the fleet it’s quite literally the best engineering expertise per hour a dollar can buy.
+                                Look at some of the world’s most successful premier engineering teams.  Teams like formula’s Ferrari and Red Bull.  When you look at these teams, who do you see at the center of all those development discussions?  The driver.  Who gets asked the most questions at the highest frequency?  The driver.  Who has what may be the most important insight into accomplishing the mission.  The DRIVER.  This is because these teams know the value of employing the person that lives or dies on your equipment to develop that equipment.  They’re in the seat, in the moment, under pressure.  They not only possess the knowledge of employing the vehicle to its maximum potential, they FEEL it.  They offer insight one cannot find anywhere else.  The teams that have the best communication between their drivers and engineers WILL produce the best vehicle for the resources available.  That’s where our corps of consultants comes in.  
+                            Aero Corps Solutions offers unparalleled access into the cockpit from the driver’s perspective.  What is important to the pilot, and why.  The What, Where, When, and Why a pilot makes a decision, and not least, the How in that pilot’s implementation of negotiating a changing mission set.  Let my pilots show you, through their experiences, what it FEELS like to be in command of all that engineering power, the burden of that responsibility, and ultimately how crucial your work as an engineer is to successfully completing these missions and bringing our warriors home.  
+                            </p>
+                            <p>
+                                WHO AM I? <br/>
+	I’m a six and a half year veteran of the United States Air Force.  I flew the C-130J Super Hercules operationally for over four years with two combat tours through Afghanistan and one combat support tour through Africa.  I was privileged with taking command in the left seat for a little over a year before I was medically retired from Active Duty.  I have an undergraduate degree in Electrical Engineering from the Georgia Institute of Technology, and I currently fly for the airlines under the Delta Connection banner.  I am Andrew N. Adams, CAPT, USAF (ret).  More importantly, I’m a veteran whose service was cut short to an abundance of caution; who still feels a deep need to serve the brothers and sisters he left behind on Active Duty.  While Air Force regulation may not be recent enough to keep me in their cockpit, my expertise in tactical airlift, military SOPs, and current employment in the airline industry make my knowledge invaluable to those who employ me as their link to the flight deck, and all things as they relate to aircrew, airspace, and integration.
+
+                            </p>
+                            <p>CURRENT PROJECTS <br/>
+                                --Checkout procedures design for C-5 Multi-Control Display Unit acceptance ground testing<br/>
+                                --Pilot SME feedback on redesign of ARC-190 radio systems focusing on Human Factors<br/>
+                                --Forensic engineering in lost fuel savings for USAF C-5 fleet, driving changes in OFP dev and/or SOPs<br/>
+                                --Informal flight training curriculum for non-flying software/computer engineers to better close the gap between pilots and engineers<br/>
+                                --Simulated flight test baseline creation for core processing line replaceable units.<br/>
+                                </p>
+                                <p>WHO WE SERVE? <br/>
+                                    Anyone who works to provide support for assets in aviation.  From human factors input on new equipment modifications to shared knowledge on standard operating procedures across the industry.  Do you contract or subcontract with the government on military aircraft systems?  Are you a DIYer and need perspective on an aircraft modification for general aviation?  Trying to design an experimental PFD for the homebuilt market but not sure what pilots want to see?  What about modules for a popular navigation software suite?  Competing for the next FMS software build to a civilian airliner?  Anyone, working on anything, that interacts in anyway with a pilot is who we are here for.  Take the time to learn what it’s like to be in the seat, and anything you build from there on out will be infinitely more relevant, because you’ve seen through our eyes.
+                                </p>
+                                <p>WHY WE SERVE? <br/>
+                                    Throughout my years in engineering I’ve seen one consistent deficiency year over year.  There is always a missing link in the chain of information between developers and users.  Users struggle to illustrate what they desire, and developers struggle to understand the user’s perspective.  It’s not a lack of intelligence on either side, it’s simply two separate languages with no one to interpret.  How do you design, modify, or improve a system in which you have never touched, much less used?  You can’t.  At least not effectively.  
+                                    “But Andy, that’s why we have test pilots.”  Absolutely, and we need them.  But they are also exceptionally busy and aren’t readily available for day to day questions or discussions.  Let’s not forget to mention you don’t procure a test flight until your product is nearly complete.  It’s too expensive.  So who then is testing along the way?  Who is prioritizing how a system evolves under its own design constraints?  Engineers.  With little to no perspective on how a pilot might actually use that equipment.  By all logical measures it is unconscionable to think we develop aircraft modifications and only ask the pilot for his input semiannually and right at the end of a projects maturity.  I have seen this lead to modifications that don’t get used by aircrew because they are irrelevant or absolutely unreliable.  All of which was easily avoidable had an aviator been involved earlier in the design loop.  
+                                    Let Aero Corps Solutions help your team shine above the competition ensuring your products are relevant and reliable, scoring you credibility in an ultra-competitive market.  Don’t send your hard work off to test before you let us before we’ve had a chance to truly polish it up.  
+                                </p>
+                        </div>
+                    </div>
+                </div>  
+                <div data-aos="zoom-in" class="col-12 col-lg-4 aos-init aos-animate">
+                    <div class="quote mt-5 mt-lg-0">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-center align-items-center">
+                                <a href="#">
+                                    <i class="icon icon-rocket"></i>
+                                </a>
+                                <div class="list-group-content">
+                                    <h4>Mission</h4>
+                                    <p>Our mission is to provide you with key insights.</p>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-center align-items-center">
+                                <a href="#">
+                                    <i class="icon icon-eye"></i>
+                                </a>
+                                <div class="list-group-content">
+                                    <h4>Vision</h4>
+                                    <p>Our vision is whatever you want it to be.</p>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-center align-items-center">
+                                <a href="#">
+                                    <i class="icon icon-present"></i>
+                                </a>
+                                <di class="list-group-content">
+                                    <h4>Values</h4>
+                                    <p>We have them.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- about-acs-2 -->
+    <section id="about-acs-2" class="section-2 odd highlights image-right counter funfacts featured">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 pr-md-5 align-self-top text">
+                    <div data-aos="fade-up" class="row intro m-0 m-md-auto aos-init">
+                        <div class="col-12 p-0">
+                            <span class="pre-title m-0">Sharing Knowledge</span>
+                            <h2><span class="featured"><span>Our</span></span>Results</h2>
+                            <p>This is where the results would go.</p>
+                            <p>Pretend these are results.</p>
+                            <blockquote>OoOoOohhhh</blockquote>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 pr-md-5 align-self-top text">
+                    <div class="row items">
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item aos-init">
+                            <div data-percent="128" class="radial left"><span></span></div>
+                            <h4>Certification</h4>
+                            <p>Yep, we are certified.</p>
+                        </div>
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item aos-init">
+                            <div data-percent="230" class="radial left"><span></span></div>
+                            <h4>Employees</h4>
+                            <p>Coming Soon...</p>
+                        </div>
+                    </div>
+                    <div class="row items">
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item aos-init">
+                            <div data-percent="517" class="radial left"><span></span></div>
+                            <h4>Customers</h4>
+                            <p>We are actively searching for customers.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Video -->
-    <section id="video" class="section-1 highlights image-center">
+    <section id="video" class="section-1 image-center">
         <div class="container smaller">
             <div class="row text-center intro">
                 <div class="col-12">
-                    <span class="pre-title">Introduction Video</span>
-                    <h2>Advisory <span class="featured"><span>Performance</span></span></h2>
-                    <p class="text-max-800">Financial executives need to review their strategies, operating models and
-                        capabilities so that their areas can generate sound information for better decision making.</p>
+                    <span class="pre-title">ABOUT AERO CORPS SOLUTIONS</span>
+                    <h2><span><span class="featured">WHO</span> WE ARE</span></h2>
+                    <p class="text-max-800"> ACS was founded in late 2020 in response to a need for deeper integration
+                        between both aerospace support entities and aerospace line operations. After years of working in
+                        both industries as an electronics engineer and as a military pilot currently at the airlines, it
+                        was clear to me the overwhelming disconnect between those that design/modify/develop aircraft
+                        systems and those who employ them.
+                    </br>
+                </br>
+                        Aero Corps Solutions offers unparalleled access into the cockpit from the driver’s perspective.
+                        What is important to the pilot, and why. The What, Where, When, and Why a pilot makes a
+                        decision, and not least, the How in that pilot’s implementation of negotiating a changing
+                        mission set. Let my pilots show you, through their experiences, what it FEELS like to be in
+                        command of all that engineering power, the burden of that responsibility, and ultimately how
+                        crucial your work as an engineer is to successfully completing these missions and bringing our
+                        warriors home.
+                    </p>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-12 gallery">
-                    <a href="https://vimeo.com/222990241"
-                        class="square-image d-flex justify-content-center align-items-center">
-                        <i class="icon bigger fas fa-play clone"></i>
-                        <i class="icon bigger fas fa-play"></i>
-                        <img src="assets/images/video-1.jpg" class="fit-image" alt="Introduction Video">
-                    </a>
+
                 </div>
             </div>
         </div>
