Added who am I section for Adam

--- a/staging/index.html
+++ b/staging/index.html
@@ -186,10 +186,8 @@
                             <div class="left text-left">
 
                                 <!-- Content -->
-                                <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text">Business
-                                    Consulting</h1>
-                                <p data-aos="zoom-in" data-aos-delay="2400" class="description">We drive product and
-                                    service innovation, improve financial performance, accelerate market speed.</p>
+                                <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text">Lorem Ipsum</h1>
+                                <p data-aos="zoom-in" data-aos-delay="2400" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                                 <!-- Action -->
                                 <div data-aos="fade-up" data-aos-delay="2800" class="buttons">
@@ -216,11 +214,8 @@
                             <div class="center text-left text-md-center">
 
                                 <!-- Content -->
-                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Financial
-                                    Risk</h2>
-                                <p data-aos="zoom-in" data-aos-delay="800" class="description mr-auto ml-auto">The right
-                                    outcomes depend on continuous rigor in governance, models, and processes across the
-                                    finance function.</p>
+                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
+                                <p data-aos="zoom-in" data-aos-delay="800" class="description mr-auto ml-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                                 <!-- Action -->
                                 <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
@@ -247,10 +242,8 @@
                             <div class="right text-left">
 
                                 <!-- Content -->
-                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Audit &
-                                    Assurance</h2>
-                                <p data-aos="zoom-in" data-aos-delay="800" class="description">Our focus is to map the
-                                    technologies to solve the business transformation, offering services.</p>
+                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
+                                <p data-aos="zoom-in" data-aos-delay="800" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                                 <!-- Action -->
                                 <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
@@ -453,9 +446,9 @@
                             <p>We are actively searching for customers.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
-        </div>-->
+        </div>
     </section>
 
     <!-- Video -->
@@ -545,8 +538,7 @@
                 <div class="col-12 col-md-9 align-self-center text-center text-md-left">
                     <span class="pre-title m-auto ml-md-0">PROJECTS</span>
                     <h2>Current<span class="featured"><span>Projects</span></span></h2>
-                    <p>We are leaders in providing consultancy services with a set of cutting-edge technologies and a
-                        team of experienced and renowned professionals. These are some of our current objectives.</p>
+                    
                 </div>
                 <div class="col-12 col-md-3 align-self-end">
                     <a href="#" class="btn mx-auto mr-md-0 ml-md-auto outline-button">SEE ALL</a>
@@ -611,13 +603,13 @@
     <section id="team" class="section-4 highlights team image-right">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-8 align-self-top text-center text-md-left text">
+                <div class="col-12 align-self-top text-center text-md-left text">
                     <div class="row intro">
                         <div class="col-12 p-0">
-                            <span class="pre-title m-auto m-md-0">We like what we do</span>
-                            <h2><span class="featured"><span>Introducing</span></span> Our Team</h2>
-                            <p>Ethics and integrity are the bases on which our professionals build their
-                                careers.<br>They are fundamentals that become daily attitudes.</p>
+                            <span class="pre-title m-auto m-md-0">INTRODUCING ANDREW ADAMS</span>
+                            <h2><span class="featured"><span>Who</span></span> Am I?</h2>
+                            <p>I’m a six and a half year veteran of the United States Air Force. I flew the C-130J Super Hercules operationally for over four years with two combat tours through Afghanistan and one combat support tour through Africa. I was privileged with taking command in the left seat for a little over a year before I was medically retired from Active Duty. I have an undergraduate degree in Electrical Engineering from the Georgia Institute of Technology, and I currently fly for the airlines under the Delta Connection banner. I am Andrew N. Adams, CAPT, USAF (ret). More importantly, I’m a veteran whose service was cut short to an abundance of caution; who still feels a deep need to serve the brothers and sisters he left behind on Active Duty. While Air Force regulation may not be recent enough to keep me in their cockpit, my expertise in tactical airlift, military SOPs, and current employment in the airline industry make my knowledge invaluable to those who employ me as their link to the flight deck, and all things as they relate to aircrew, airspace, and integration.</p>
+
                         </div>
                     </div>
                     <div class="row items text-left">
@@ -642,7 +634,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row item">
+                            <!-- <div class="row item">
                                 <div class="col-4 p-0 pr-3 align-self-center">
                                     <img src="assets/images/team-2.jpg" alt="Person" class="person">
                                 </div>
@@ -661,9 +653,9 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
-                        <div class="col-12 col-md-6 p-0">
+                        <!-- <div class="col-12 col-md-6 p-0">
                             <div class="row item">
                                 <div class="col-4 p-0 pr-3 align-self-center">
                                     <img src="assets/images/team-3.jpg" alt="Person" class="person">
@@ -704,10 +696,10 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div data-aos="zoom-in" class="col-12 col-lg-4 align-self-end">
+                <!-- <div data-aos="zoom-in" class="col-12 col-lg-4 align-self-end">
                     <div class="quote">
                         <div class="quote-content">
                             <h4>Who Am I?</h4>
@@ -717,10 +709,10 @@
                         </div>
                         <i class="quote-right fas fa-quote-right"></i>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-    </section>
+    </section> 
 
     <!-- Blog -->
    <!-- <section id="blog" class="section-5 carousel showcase">
@@ -958,7 +950,7 @@
     <footer>
 
         <!-- Footer [content] -->
-        <section id="footer" class="odd footer offers">
+        <!--<section id="footer" class="odd footer offers">
             <div class="container">
                 <div class="row">
 
@@ -1001,7 +993,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Copyright -->
         <section id="copyright" class="p-3 odd copyright">
@@ -1202,7 +1194,6 @@
     <script src="assets/js/vendor/bricklayer.min.js"></script>
     <script src="assets/js/vendor/gallery.min.js"></script>
     <script src="assets/js/vendor/shuffle.min.js"></script>
-
     <script src="assets/js/vendor/particles.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
