--- a/staging/index.html
+++ b/staging/index.html
@@ -92,8 +92,7 @@
                 <!-- Navbar Items [left] -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link pl-0"><i class="fas fa-clock mr-2"></i>Open Hours: Mon - Sat - 9:00
-                            - 18:00</a>
+                        <a href="#" class="nav-link pl-0"><i class="fas fa-clock mr-2"></i>Hours of Operation: 24/7</a>
                     </li>
                 </ul>
 
@@ -135,7 +134,7 @@
 
                 <!-- Navbar Items -->
                 <ul class="navbar-nav items">
-                    <li class="nav-item">
+                    <li class="nav-item" data-hello="world">
                         <a href="#header" class="smooth-anchor nav-link">HOME</a>
                     </li>
                     <li class="nav-item">
@@ -146,6 +145,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="#team" class="smooth-anchor nav-link">TEAM</a>
+                    </li>
+                    <li class="nav-item d-md-none">
+                        <a href="mailto:contact@aerocorpssolutions.com" class="nav-link">GET IN TOUCH</a>
                     </li>
                 </ul>
 
@@ -162,7 +164,7 @@
                 <!-- Navbar Action -->
                 <ul class="navbar-nav action">
                     <li class="nav-item ml-3">
-                        <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button">GET IN TOUCH</a>
+                        <a href="mailto:contact@aerocorpssolutions.com" class="btn ml-auto primary-button">GET IN TOUCH</a>
                     </li>
                 </ul>
             </div>
@@ -171,7 +173,7 @@
     </header>
 
     <!-- Hero -->
-    <section id="slider" class="hero p-0 odd">
+    <section id="slider" class="hero p-0 odd d-md-block d-none">
         <div class="swiper-container full-slider animation slider-h-100 slider-h-auto">
             <div class="swiper-wrapper">
 
@@ -179,25 +181,25 @@
                 <div class="swiper-slide slide-center">
 
                     <!-- Media -->
-                    <img src="assets/images/bg-1.jpg" alt="Full Image" class="full-image" data-mask="40">
+                    <img src="logo.svg" alt="Full Image" class="full-image" data-mask="40">
 
                     <div class="slide-content row">
                         <div class="col-12 d-flex justify-content-start inner">
                             <div class="left text-left">
 
                                 <!-- Content -->
-                                <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text">Lorem Ipsum</h1>
-                                <p data-aos="zoom-in" data-aos-delay="2400" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <!-- <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text">Lorem Ipsum</h1>
+                                <p data-aos="zoom-in" data-aos-delay="2400" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
 
                                 <!-- Action -->
-                                <div data-aos="fade-up" data-aos-delay="2800" class="buttons">
+                                <!-- <div data-aos="fade-up" data-aos-delay="2800" class="buttons">
                                     <div class="d-sm-inline-flex">
                                         <a href="#contact" class="smooth-anchor mt-4 btn primary-button">GET IN
                                             TOUCH</a>
                                         <a href="#video" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">READ
                                             MORE</a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -214,18 +216,18 @@
                             <div class="center text-left text-md-center">
 
                                 <!-- Content -->
-                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
-                                <p data-aos="zoom-in" data-aos-delay="800" class="description mr-auto ml-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <!-- <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
+                                <p data-aos="zoom-in" data-aos-delay="800" class="description mr-auto ml-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
 
                                 <!-- Action -->
-                                <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
+                                <!-- <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
                                     <div class="d-sm-inline-flex">
                                         <a href="#contact" class="smooth-anchor mt-4 btn primary-button">GET IN
                                             TOUCH</a>
                                         <a href="#video" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">READ
                                             MORE</a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -242,18 +244,18 @@
                             <div class="right text-left">
 
                                 <!-- Content -->
-                                <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
-                                <p data-aos="zoom-in" data-aos-delay="800" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <!-- <h2 data-aos="zoom-in" data-aos-delay="400" class="title effect-static-text">Lorem Ipsum</h2>
+                                <p data-aos="zoom-in" data-aos-delay="800" class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
 
                                 <!-- Action -->
-                                <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
+                                <!-- <div data-aos="fade-up" data-aos-delay="1200" class="buttons">
                                     <div class="d-sm-inline-flex">
                                         <a href="#contact" class="smooth-anchor mt-4 btn primary-button">GET IN
                                             TOUCH</a>
                                         <a href="#video" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">READ
                                             MORE</a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -281,7 +283,7 @@
                         Aero Corps Solutions offers unparalleled access into the cockpit from the driver’s perspective.
                         What is important to the pilot, and why. The What, Where, When, and Why a pilot makes a
                         decision, and not least, the How in that pilot’s implementation of negotiating a changing
-                        mission set. Let my pilots show you, through their experiences, what it FEELS like to be in
+                        mission set. Let me show you, through my experiences, what it FEELS like to be in
                         command of all that engineering power, the burden of that responsibility, and ultimately how
                         crucial your work as an engineer is to successfully completing these missions and bringing our
                         warriors home.
@@ -540,9 +542,9 @@
                     <h2>Current<span class="featured"><span>Projects</span></span></h2>
                     
                 </div>
-                <div class="col-12 col-md-3 align-self-end">
+                <!-- <div class="col-12 col-md-3 align-self-end">
                     <a href="#" class="btn mx-auto mr-md-0 ml-md-auto outline-button">SEE ALL</a>
-                </div>
+                </div> -->
             </div>
             <div class="row justify-content-center items">
                 <div class="col-12 col-md-6 col-lg-4 item">
@@ -550,7 +552,7 @@
                         <i class="icon icon-organization"></i>
                         <h4>Checkout procedures design for C-5 Multi-Control Display Unit acceptance ground testing</h4>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>-->
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item">
@@ -559,7 +561,7 @@
                         <h4>Informal flight training curriculum for non-flying software/computer engineers to better
                             close the gap between pilots and engineers</h4>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>-->
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item">
@@ -568,7 +570,7 @@
                         <h4>Forensic engineering in lost fuel savings for USAF C-5 fleet, driving changes in OFP dev
                             and/or SOPs</h4>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>-->
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item">
@@ -576,7 +578,7 @@
                         <i class="icon icon-plane"></i>
                         <h4>Pilot SME feedback on redesign of ARC-190 radio systems focusing on Human Factors</h4>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>-->
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item">
@@ -584,15 +586,14 @@
                         <i class="icon icon-globe-alt"></i>
                         <h4>Simulated flight test baseline creation for core processing line replaceable units</h4>
                         <!--<p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>-->
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 item">
                     <div class="card">
                         <i class="icon icon-drawer"></i>
-                        <h4>We Want To Help!</h4>
-                        <p>We are here to provide you with insight given from our highly experienced professionals. Need help? Contact us now! </p>
-                        <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
+                        <h4>Parse through and quantify in-depth techincal data to provide simulation profile(s) for sim aero model validation</h4>
+                        <!-- <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a> -->
                     </div>
                 </div>
             </div>
@@ -620,7 +621,7 @@
                                 </div>
                                 <div class="col-8 align-self-center text-left">
                                     <h4>Andrew Adams</h4>
-                                    <p>PILOT</p>
+                                    <p>President / Pilot SME</p>
                                     <ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
