--- a/staging/index.html
+++ b/staging/index.html
@@ -622,7 +622,7 @@
                                 <div class="col-8 align-self-center text-left">
                                     <h4>Andrew Adams</h4>
                                     <p>President / Pilot SME</p>
-                                    <ul class="navbar-nav social share-list ml-auto">
+                                    <!--<ul class="navbar-nav social share-list ml-auto">
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
                                         </li>
@@ -632,7 +632,7 @@
                                         <li class="nav-item">
                                             <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
                             <!-- <div class="row item">
