changed logo with text as 1st image on banner

--- a/staging/index.html
+++ b/staging/index.html
@@ -181,7 +181,7 @@
                 <div class="swiper-slide slide-center">
 
                     <!-- Media -->
-                    <img src="logo.svg" alt="Full Image" class="full-image" data-mask="40">
+                    <img src="logo-full.svg" alt="Full Image" class="full-image" data-mask="40">
 
                     <div class="slide-content row">
                         <div class="col-12 d-flex justify-content-start inner">
