--- a/staging/index.html
+++ b/staging/index.html
@@ -102,7 +102,7 @@
                 <!-- Navbar Items [right] -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fas fa-phone-alt mr-2"></i>+1 (555) 555-5555</a>
+                        <a href="tel:4782092662" class="nav-link"><i class="fas fa-phone-alt mr-2"></i>(478) 209-2662</a>
                     </li>
                     <li class="nav-item">
                         <a href="mailto:contact@aerocorpssolutions.com" class="nav-link"><i
@@ -141,7 +141,7 @@
                         <a href="#video" class="smooth-anchor nav-link">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="smooth-anchor nav-link">SERVICES</a>
+                        <a href="#projects" class="smooth-anchor nav-link">PROJECTS</a>
                     </li>
                     <li class="nav-item">
                         <a href="#team" class="smooth-anchor nav-link">TEAM</a>
@@ -534,7 +534,7 @@
     </section> -->
 
     <!-- Services -->
-    <section id="services" class="section-3 odd offers">
+    <section id="projects" class="section-3 odd offers">
         <div class="container">
             <div class="row intro">
                 <div class="col-12 col-md-9 align-self-center text-center text-md-left">
