updated contact links on mobile nav

--- a/staging/index.html
+++ b/staging/index.html
@@ -146,8 +146,24 @@
                     <li class="nav-item">
                         <a href="#team" class="smooth-anchor nav-link">TEAM</a>
                     </li>
-                    <li class="nav-item d-md-none">
-                        <a href="mailto:contact@aerocorpssolutions.com" class="nav-link">GET IN TOUCH</a>
+                    <li class="nav-item d-lg-none">
+                        <span class="nav-link">CONTACT US</span>
+                    </li>
+                    <li class="nav-item d-lg-none">
+                        <a href="mailto:contact@aerocorpssolutions.com" class="nav-link p-2 ml-3" style="font-size: 1.2rem; font-weight: 500;">
+                            <div>
+                                <i class="fas fa-envelope mr-2"></i>
+                                contact@aerocorpssolutions.com
+                            </div>
+                        </a>
+                    </li>
+                    <li class="nav-item d-lg-none">
+                        <a href="tel:4782092662" class="nav-link p-2 ml-3" style="font-size: 1.2rem; font-weight: 500;">
+                            <div>
+                                <i class="fas fa-phone-alt mr-2"></i>
+                                (478) 209-2662
+                            </div>
+                        </a>
                     </li>
                 </ul>
 
