fixing logo centering and scaling on slider

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="swiper-slide slide-center">
 
                     <!-- Media -->
-                    <img src="logo-full.svg" alt="Full Image" class="full-image" data-mask="40">
+                    <img src="logo-full.svg" alt="Full Image" class="full-image" data-mask="40" style="object-fit: fill;">
 
                     <div class="slide-content row">
                         <div class="col-12 d-flex justify-content-start inner">
