--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                 aviator been involved earlier in the design loop.
                                 Let Aero Corps Solutions help your team shine above the competition ensuring your
                                 products are relevant and reliable, scoring you credibility in an ultra-competitive
-                                market. Don’t send your hard work off to test before you let us before we’ve had a
+                                market. Don’t send your hard work off to test before we’ve had a
                                 chance to truly polish it up.
                             </p>
                         </div>
@@ -496,7 +496,7 @@
                         aviator been involved earlier in the design loop.
                         Let Aero Corps Solutions help your team shine above the competition ensuring your
                         products are relevant and reliable, scoring you credibility in an ultra-competitive
-                        market. Don’t send your hard work off to test before you let us before we’ve had a
+                        market. Don’t send your hard work off to test before we’ve had a
                         chance to truly polish it up.
                     </p>
                 </div>
